2003-05-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkselectiondata.c: Removed Gtk::SelectionData.remove_all.
	Use Gtk::Selection.remove_all instead.
	* src/rbgtktargetlist.c: Added. 
	* src/rbgtkselection.c: Add Gtk::Selection.add_targets.
	* src/rbgtkconst.c: Update version information. 
	* src/rbgtkmain.c: Add Gtk.check_version. 
	* src/rbgtkaccessible.c: Added.
	* src/rbgtkstyle.c: Add Gtk::Style#text_aa, #set_text_aa, #font_desc, 
	#set_font_desc, #xthickness, #set_xthickness, #ythickness, #set_ythickness,
	#set_fg_gc, #set_bg_gc, #set_light_gc, #set_dark_gc, #set_mid_gc,
	#set_text_gc, #set_base_gc, #set_text_aa_gc, #set_black_gc, #set_white_gc,
	#set_bg_pixmap, #paint_*, #lookup_icon_set, #render_icon, 
	#apply_default_background
	* src/rbgtkcelleditable.c: Gtk::CellEditable.start_editing accept nil. 

2003-05-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktoolbar.c: Fixed incorrect calls of G_RELATIVE. 
	* src/rbgtkwindow.c: Add Gtk::Window#set_frame_dimensions,
	#set_has_frame, #set_mnemonic_modifier, #add_mnemonic, #remove_mnemonic,
	#mnemonic_activate, #begin_resize_drag, #move_drag, #has_frame?
	#icon_list, #mnemonic_modifier, #parse_geometry, #reshow_with_initial_size
	#set_icon_list.
	.toplevels, .default_icon_list, .set_default_icon_list
	* src/rbgtkwidget.c: Add Gtk::Widget#flags, #set_flags, #unset_flags.

2003-05-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktoolbar.c: Fixed an incorrect call of G_RELATIVE. 

2003-05-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkrc.c: Use rb_const_defined_at() instead of rbgobj_exist_class().
	Pointed out by Masahiro Sakai.
	* src/rbgtkitemfactory.c: Gtk::ItemFactory#get_item/widget return Qnil 
	when the functions return NULL. 

2003-05-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkrcstyle.c: Added.
	* src/rbgtkrc.c: Add Gtk::RC.get_style_by_paths, .reparse_all_for_settings, 
	.add_default_file, .default_files, .set_default_files, .find_module_in_path, 