@@ -4,7 +4,7 @@
 
   Copyright (C) 2002,2003 Ruby-GNOME2 Project Team
 
-  $Id: progressbar.rb,v 1.7 2003/02/01 16:46:23 mutoh Exp $
+  $Id: progressbar.rb,v 1.8 2003/05/24 15:30:59 mutoh Exp $
 
   Rewritten by Minoru Inachi <inachi@earth.interq.or.jp>
 
@@ -71,7 +71,7 @@ class ProgressBarSample < SampleDialog
     vbox2 = Gtk::VBox.new(false, 5)
     frame.add(vbox2)
 
-    tab = Gtk::Table.new(7, 2, false)
+    tab = Gtk::Table.new(3, 2, false)
     vbox2.pack_start(tab, false,true, 0)
 
     label = Gtk::Label.new("Orientation :");
@@ -132,56 +132,6 @@ class ProgressBarSample < SampleDialog
     hbox.pack_start(@y_align_spin, false, true, 0)
     @y_align_spin.set_sensitive(false)
 
-    label = Gtk::Label.new("Bar Style :")
-    tab.attach(label, 0, 1, 3, 4,
-		Gtk::EXPAND | Gtk::FILL, Gtk::EXPAND | Gtk::FILL,
-		5, 5);
-    label.set_alignment(0, 0.5)
-
-    @omenu2 = build_option_menu(
-	[ OptionMenuItem.new("Continuous", proc { |w| toggle_bar_style(w) }),
-	  OptionMenuItem.new("Discrete", proc { |w| toggle_bar_style(w) }),
-	], 0)
-    hbox = Gtk::HBox.new(false, 0)
-    tab.attach(hbox, 1, 2, 3, 4,
-		Gtk::EXPAND | Gtk::FILL, Gtk::EXPAND | Gtk::FILL,
-		5, 5);
-    hbox.pack_start(@omenu2)
-
-    label = Gtk::Label.new("Block count :")
-    tab.attach(label, 0, 1, 4, 5,
-		Gtk::EXPAND | Gtk::FILL, Gtk::EXPAND | Gtk::FILL,
-		5, 5)
-    label.set_alignment(0, 0.5)
-
-    hbox = Gtk::HBox.new(false, 0)
-    tab.attach(hbox, 1, 2, 4, 5,
-		Gtk::EXPAND | Gtk::FILL, Gtk::EXPAND | Gtk::FILL,
-		5, 5)
-    adj = Gtk::Adjustment.new(10, 2, 20, 1, 5, 0)
-    @block_spin = Gtk::SpinButton.new(adj, 0, 0)
-    adj.signal_connect("value_changed") do adjust_blocks end
-    hbox.pack_start(@block_spin, false, true, 0)
-    @block_spin.set_sensitive(false)
-
-    check = Gtk::CheckButton.new("Activity mode")
-    check.signal_connect("clicked") do |w| toggle_activity_mode(w) end
-    tab.attach(check, 0, 1, 5, 6,
-		Gtk::EXPAND | Gtk::FILL, Gtk::EXPAND | Gtk::FILL,
-		5, 5);
-
-    hbox = Gtk::HBox.new(false, 0)
-    tab.attach(hbox, 1, 2, 5, 6,
-		Gtk::EXPAND | Gtk::FILL, Gtk::EXPAND | Gtk::FILL,
-		5, 5)
-    label = Gtk::Label.new("Blocks : ")
-    hbox.pack_start(label, false, true, 0)
-    adj = Gtk::Adjustment.new(5, 2, 10, 1, 5, 0)
-    @act_blocks_spin = Gtk::SpinButton.new(adj, 0, 0)
-    adj.signal_connect("value_changed") do adjust_act_blocks end
-    hbox.pack_start(@act_blocks_spin, false, true, 0)
-    @act_blocks_spin.set_sensitive(false)
-
     button = Gtk::Button.new("close")
     button.signal_connect("clicked") do
       Gtk::timeout_remove(@timer)
@@ -207,33 +157,11 @@ class ProgressBarSample < SampleDialog
   end
 
   private
-  def toggle_bar_style(rmitem)
-    return unless rmitem.mapped?
-
-    i = 1
-    group = rmitem.group
-    group.each do |g|
-      break if g.active?
-      i -= 1
-    end
-
-    if i == 1 then
-      @block_spin.set_sensitive(true)
-    else
-      @block_spin.set_sensitive(false)
-    end
-
-    @pbar.set_bar_style(i)
-  end
-
-  private
   def progress_timeout
-    adj = @pbar.adjustment
-    new_val = adj.value.floor + 1.0
-    new_val = adj.lower if new_val > adj.upper
-    adj.value = new_val
-#    @pbar.set_fraction(new_val / 100.0)
-    @label.set_text(sprintf("%d%%", new_val))
+    new_val = @pbar.fraction + 0.05
+    new_val = 0.0 if new_val > 1.0
+    @pbar.fraction = new_val
+    @label.set_text("#{(new_val * 100).to_i}")
     true
   end
 
@@ -250,20 +178,4 @@ class ProgressBarSample < SampleDialog
     @pbar.text_yalign = @y_align_spin.value
   end
 
-  private
-  def adjust_blocks
-    @pbar.set_fraction(0)
-    @pbar.set_discrete_blocks(@block_spin.value_as_int)
-  end
-
-  private
-  def adjust_act_blocks
-    @pbar.set_activity_blocks(@act_blocks_spin.value_as_int)
-  end
-
-  private
-  def toggle_activity_mode(cbutton)
-    @pbar.set_activity_mode(cbutton.active?)
-    @act_blocks_spin.set_sensitive(cbutton.active?)
-  end
 end
