@@ -4,7 +4,7 @@
 
   Copyright (C) 2002,2003 Ruby-GNOME2 Project Team
 
-  $Id: rulers.rb,v 1.5 2003/02/01 16:46:23 mutoh Exp $
+  $Id: rulers.rb,v 1.6 2003/05/24 15:30:59 mutoh Exp $
 
 =end
 
@@ -24,7 +24,8 @@ class RulerSample < SampleWindow
     hruler.set_metric(Gtk::CENTIMETERS)
     hruler.set_range(100, 0, 0, 20)
     signal_connect("motion_notify_event") do |w, e|
-      hruler.motion_notify_event(e)
+#      hruler.motion_notify_event(e)
+#      hruler.signal_emit("motion_notify_event", e)
     end
     table.attach(hruler, 1, 2, 0, 1,
 		 Gtk::EXPAND | Gtk::FILL, Gtk::FILL, 0, 0)
@@ -33,7 +34,9 @@ class RulerSample < SampleWindow
     vruler = Gtk::VRuler::new()
     vruler.set_range(5, 15, 0, 20)
     signal_connect("motion_notify_event") do |w, e|
-      vruler.motion_notify_event(e)
+#       hruler.signal_emit("changed")
+#       hruler.signal_emit("motion_notify_event")
+#      vruler.motion_notify_event([e])
     end
     table.attach(vruler, 0, 1, 1, 2,
 		 Gtk::FILL, Gtk::EXPAND | Gtk::FILL, 0, 0)
